--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
-<!--  
-app
-art
-blog
-bookish
-magazine
-music
-video
-workspace1
--->
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-  <title>Shi</title>
-  <link rel="stylesheet" href="https://www.w3schools.com/html/styles.css">
-<link rel="stylesheet" href="css/mde_styles.css">
-<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>     
+	<link rel="stylesheet" href="https://www.mensahdesigns.co/mensahsite/css/mde_styles.css">
+<meta charset="UTF-8">
+<title>The Dreamer</title>
+	<style>     
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 
 body {
@@ -89,8 +77,12 @@ p {
 
 </style>
 </head>
-<body>  
-    <div>
+
+<body>
+	<h1 class="puss_black">Hello.</h1>
+	<p class="puss">Meet me.</p>
+	
+	    <div>
   <h2>Responsive Flexbox Grid</h2>
   <p>Resize the browser window to see the grid adapt to the new window size.</p><br><br>
 </div>
@@ -110,12 +102,10 @@ p {
     <div class="content-container">8</div>
     <div class="content-container">9</div>
   </div>
-  <div class="column">
-    <div class="content-container">10</div>
-    <div class="content-container">11</div>
-    <div class="content-container">12</div>
-  </div>
-</div>
+  
 
-    </body>
-</html>   
+	
+
+</div>
+</body>
+</html>
